--- a/API/package.json
+++ b/API/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/softportal/AmadeusTest#readme",
   "dependencies": {
+    "amadeus": "^1.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.3"
